# Nyaadle

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  args.yaml  main.rs  parse.rs  settings.rs  tui.rs
src/parse/: mod.rs
