[package]
name = "nyaadle"
version = "2.6.1-beta.1"
authors = ["Joash Christian Liwanag <nightlock0326@gmail.com>"]
edition = "2018"
description = "A small rss parser and downloader for a certain cat-themed website"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "~1.9.0", features = ["from_url"] }
reqwest = "0.9.24"
error-chain = "0.12.2"
dirs = "2.0.2"
rusqlite = { version = "0.24.1", features = ["bundled"] }
clap = { version = "~3.1.6", features = [ "derive" ] }
cursive_table_view = "0.13"
simplelog = "0.9.0"
log = "0.4.14"
opener = "0.4.1"

[dependencies.cursive]
version = "0.16"
default-features = false
features = [ "crossterm-backend" ]

