[package]
name = "nyaadle"
version = "3.0.0-dev"
authors = ["Joash Christian Liwanag <nightlock0326@gmail.com>"]
edition = "2018"
description = "A small rss parser and downloader for a certain cat-themed website"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "~2.0.0"
reqwest = "0.11.0"
error-chain = "0.12.2"
dirs = "2.0.2"
rusqlite = { version = "0.24.1", features = ["bundled"] }
clap = { version = "~3.1.6", features = [ "derive" ] }
cursive_table_view = "0.14"
simplelog = "0.9.0"
log = "0.4.14"
opener = "0.4.1"
tokio = { version = "1.21.2", features = ["full"]}
tokio-macros = { version = "2.2.0"}
[dependencies.cursive]
version = "0.20"
default-features = false
features = [ "crossterm-backend" ]

