[package]
name = "nyaadle"
version = "3.0.0-dev.2"
authors = ["Joash Christian Liwanag <nightlock0326@gmail.com>"]
edition = "2018"
description = "A small rss parser and downloader for a certain cat-themed website"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "~2.0.11"
reqwest = "0.12.9"
dirs = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
clap = { version = "~4.5.23", features = [ "derive" ] }
cursive_table_view = "0.15"
simplelog = "0.12.2"
log = "0.4.22"
opener = "0.7.2"
tokio = { version = "1.42.0", features = ["full"]}
tokio-macros = { version = "2.4.0"}
time = "0.3.37"
anyhow = "1.0"
serenity = { version = "0.12", optional = true }

[dependencies.cursive]
version = "0.21"
default-features = false
features = [ "crossterm-backend" ]

[features]
default = []
discord = ["dep:serenity"]
